--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,5 +5,15 @@ file(GLOB
      *.cxx
      )
 
-add_executable(melissa_server ${ALL_SERVER} $<TARGET_OBJECTS:melissa_common>)
+add_executable(melissa_server ${ALL_SERVER} $<TARGET_OBJECTS:melissa_common> )
+
+# PDAF:
+SET(PDAF_PATH /home/friese/workspace/PDAF-D_V1.13.2_melissa)
+target_link_libraries(melissa_server ${PDAF_PATH}/testsuite/src/lorenz96/lorenz96_pdaf.a)
+target_link_libraries(melissa_server ${PDAF_PATH}/testsuite/src/main/driver.a)
+target_link_libraries(melissa_server ${PDAF_PATH}/lib/libpdaf-d.a)
+target_link_libraries(melissa_server gfortran netcdf netcdff lapack blas m)
+
+
+
 INSTALL(TARGETS melissa_server RUNTIME DESTINATION bin)
