Extract some parametes to be passed to pdaf and compile with mpi fortran libs

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(melissa_server ${PDAF_PATH}/testsuite/src/main/driver.a)
 target_link_libraries(melissa_server ${PDAF_PATH}/lib/libpdaf-d.a)
 target_link_libraries(melissa_server gfortran netcdf netcdff lapack blas m)
 
+# To link against pdaf stuff:
+target_link_libraries(melissa_server ${MPI_Fortran_LIBRARIES})
+
 
 
 INSTALL(TARGETS melissa_server RUNTIME DESTINATION bin)
