Do dummy assimilation on pdaf-simulation1

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,6 +6,7 @@ file(GLOB
      )
 
 add_executable(melissa_server ${ALL_SERVER} $<TARGET_OBJECTS:melissa_common> )
+message("asll server: ${ALL_SERVER}")
 
 # PDAF:
 SET(PDAF_PATH /home/friese/workspace/PDAF-D_V1.13.2_melissa)
