--- a/pdaf-simulation1/CMakeLists.txt
+++ b/pdaf-simulation1/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB
 
 # PDAF:
 SET(PDAF_PATH /home/friese/workspace/PDAF-D_V1.13.2_melissa)
-target_link_libraries(pdaf-simulation1 gfortran netcdf netcdff lapack blas m)
+target_link_libraries(pdaf-simulation1 gfortran lapack blas m)
 
 # To link against pdaf stuff:
 target_link_libraries(pdaf-simulation1 ${MPI_Fortran_LIBRARIES})
