Implement pdaf with the tutorial 2D model

--- a/pdaf-wrapper/CMakeLists.txt
+++ b/pdaf-wrapper/CMakeLists.txt
@@ -8,8 +8,8 @@ file(GLOB
 file(GLOB
   ALL_USER
      RELATIVE
-     ${CMAKE_CURRENT_SOURCE_DIR}/user
-     *.F90
+     ${CMAKE_CURRENT_SOURCE_DIR}
+     user/*.F90
      )
 
 add_library(pdaf_wrapper STATIC ${ALL_PDAF_WRAPPER} ${ALL_USER})
