--- a/pdaf-wrapper/CMakeLists.txt
+++ b/pdaf-wrapper/CMakeLists.txt
@@ -17,8 +17,7 @@ target_compile_options(pdaf_wrapper BEFORE PUBLIC -fPIC)
 
 
 # PDAF:
-SET(PDAF_PATH /home/friese/workspace/PDAF-D_V1.13.2_melissa)
-target_link_libraries(pdaf_wrapper ${PDAF_PATH}/lib/libpdaf-d.a)
+target_link_libraries(pdaf_wrapper pdaf)
 target_link_libraries(pdaf_wrapper gfortran lapack blas m)
 
 # To link against pdaf stuff:
