--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable(melissa_server ${ALL_SERVER} $<TARGET_OBJECTS:melissa_common>)
 
 target_link_libraries(melissa_server pdaf_wrapper)
 
+target_include_directories(melissa_server PUBLIC ${CMAKE_SOURCE_DIR}/pdaf-wrapper)
+
 # PDAF:
 target_link_libraries(melissa_server gfortran lapack blas m)
 
