--- a/.cproject
+++ b/.cproject
@@ -21,6 +21,8 @@
 							<tool command="mpicxx" id="cdt.managedbuild.tool.gnu.cpp.compiler.base.76486408" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1059844346" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/pdaf-wrapper}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.1154634424" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.other.other.77719821" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 -fbounds-check" valueType="string"/>
@@ -29,6 +31,8 @@
 							<tool command="mpicc" id="cdt.managedbuild.tool.gnu.c.compiler.base.1332654884" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.2013954742" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/pdaf-wrapper}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.134106210" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -60,6 +64,8 @@
 							<tool id="cdt.managedbuild.tool.gnu.assembler.base.401954658" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.219921015" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/pdaf-wrapper}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.530468847" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -100,6 +106,7 @@
 							<tool command="mpicxx" id="cdt.managedbuild.tool.gnu.cpp.compiler.base.619685976" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1021061414" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.1892482589" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.other.pic.1558089487" name="Position Independent Code (-fPIC)" superClass="gnu.cpp.compiler.option.other.pic" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -109,6 +116,7 @@
 							<tool command="mpicc" id="cdt.managedbuild.tool.gnu.c.compiler.base.517463441" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.1426660870" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.589522808" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -131,6 +139,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.assembler.base.1506212034" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.1076477882" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1696301375" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -165,6 +174,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.327261388" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.704059127" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.other.other.1347331528" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 -fbounds-check" valueType="string"/>
@@ -174,6 +184,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.1967084635" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1860216464" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -197,6 +208,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.712545260" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/friese/workspace/melissa/install/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/melissa-da/common}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.674105284" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
