Rename example simulation
For naming conventions

--- a/examples/simulation1/CMakeLists.txt
+++ b/examples/simulation1/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_executable(example_simulation simulation.cxx)
-target_link_libraries(example_simulation melissa_api)
-INSTALL(TARGETS example_simulation RUNTIME DESTINATION bin)
+add_executable(simulation1 simulation.cxx)
+target_link_libraries(simulation1 melissa_api)
+INSTALL(TARGETS simulation1 RUNTIME DESTINATION bin)
