Install zmq if not available
This feature is coming from melissa-sa

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -7,4 +7,9 @@ file(GLOB
 
 
 add_library(melissa_common OBJECT ${ALL_COMMON})
+
+if(INSTALL_ZMQ)
+  add_dependencies(melissa_common ZeroMQ)
+endif(INSTALL_ZMQ)
+
 target_compile_options(melissa_common BEFORE PUBLIC -fPIC)
