--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_libraries(melissa_server pdaf_wrapper)
 target_include_directories(melissa_server PUBLIC ${CMAKE_SOURCE_DIR}/pdaf-wrapper)
 
 # PDAF:
-target_link_libraries(melissa_server gfortran lapack blas m)
+target_link_libraries(melissa_server gfortran ${Fortran_MATH_LIBRARIES} m)
 
 # To link against pdaf stuff:
 target_link_libraries(melissa_server ${MPI_Fortran_LIBRARIES})
