Add Empty assimilator and Empty simulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_subdirectory(server)
 add_subdirectory(api)
 add_subdirectory(examples/simulation1)
 add_subdirectory(examples/simulation2-pdaf)
+add_subdirectory(examples/simulation3-empty)
 
 configure_file(melissa-da_set_env.sh.in melissa-da_set_env.sh @ONLY)
 install(FILES ${CMAKE_BINARY_DIR}/melissa-da_set_env.sh DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
