--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -3,7 +3,7 @@ export LD_LIBRARY_PATH=@ZeroMQ_INCLUDE_DIR@/../lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@FTI_HOME@/lib:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
-export DATASET_PATH=@DATASET_PATH@
+export DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
 export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 
 export MPIEXEC=@MPIEXEC_EXECUTABLE@
