Make server build dependent from FTI and parallel HDF5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(melissa LANGUAGES CXX Fortran)
+project(melissa LANGUAGES CXX C Fortran)
 cmake_minimum_required(VERSION 3.2.2)
 
 find_package(MPI REQUIRED)
@@ -37,7 +37,7 @@ if(INSTALL_FTI)
     MESSAGE(STATUS "FTI will be installed")
     set(FTI_PATH "${CMAKE_INSTALL_PREFIX}/FTI")
     set(FTI_LIBRARY "${FTI_PATH}/lib/libfti.so")
-    set(FTI_INCLUDE_DIR "${FTI_PATH}/include/")
+    set(FTI_INCLUDE_DIR "${FTI_PATH}/include")
     set(WITH_FTI TRUE)
 elseif(WITH_FTI OR WITH_FTI_THREADS)
     if(EXISTS "${FTI_PATH}/lib/libfti.so")
@@ -46,7 +46,7 @@ elseif(WITH_FTI OR WITH_FTI_THREADS)
         message(FATAL_ERROR "could not find FTI library in ${FTI_PATH}/lib")
     endif()
     if(EXISTS "${FTI_PATH}/include/fti.h")
-        set(FTI_INCLUDE_DIR "${FTI_PATH}/include/")
+        set(FTI_INCLUDE_DIR "${FTI_PATH}/include")
     else()
         message(FATAL_ERROR "could not find FTI header file in ${FTI_PATH}/include")
     endif()
