--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,11 +7,21 @@ file(GLOB
 
 add_executable(melissa_server ${ALL_SERVER} $<TARGET_OBJECTS:melissa_common>)
 
+if(INSTALL_FTI)
+    add_dependencies(melissa_server FTI)
+endif(INSTALL_FTI)
+
 if(WITH_FTI OR WITH_FTI_THREADS)
     target_include_directories(melissa_server PUBLIC "${FTI_INCLUDE_DIR}")
     target_link_libraries(melissa_server ${FTI_LIBRARY})
     target_compile_definitions(melissa_server PUBLIC WITH_FTI)
-  if(WITH_FTI_THREADS)  
+    find_package(HDF5 REQUIRED)
+    if (NOT(HDF5_IS_PARALLEL))
+        message(FATAL_ERROR "Could not find parallel HDF5 library! The one found is sequential. Please install a parallel HDF5 library!")
+    endif(NOT(HDF5_IS_PARALLEL))
+
+    target_link_libraries(melissa_server ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
+  if(WITH_FTI_THREADS)
     target_compile_definitions(melissa_server PUBLIC WITH_FTI_THREADS)
   endif(WITH_FTI_THREADS)
 endif(WITH_FTI OR WITH_FTI_THREADS)
@@ -29,6 +39,7 @@ target_link_libraries(melissa_server gfortran ${Fortran_MATH_LIBRARIES} m)
 
 # To link against pdaf stuff:
 target_link_libraries(melissa_server ${MPI_Fortran_LIBRARIES})
+
 
 
 
