Link against pdaf wrapper functions dynamically
Thus one can replace the pdaf wrapper functions by user defined as
needed for the pure-parflow assimilation project. Unfortunately this is
kind of dirty from an software engineering point of view as there are
a lot of code duplications. Still it is really hard to define a flexible
and at the same time minimalistic interface.

Furthermore I do not know how much performance we loose by using shared
libraries and especially the preload trick.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,9 @@ add_subdirectory(examples/simulation1)
 add_subdirectory(examples/simulation2-pdaf)
 add_subdirectory(examples/simulation3-empty)
 
+# install the special parflow pure pdaf wrapper....
+add_subdirectory(examples/parflow-pure/pdaf-wrapper)
+
 configure_file(melissa-da_set_env.sh.in melissa-da_set_env.sh @ONLY)
 install(FILES ${CMAKE_BINARY_DIR}/melissa-da_set_env.sh DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
     PERMISSIONS OWNER_WRITE
