--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -11,7 +11,6 @@ if(INSTALL_ZMQ)
   add_dependencies(melissa_server ZeroMQ)
 endif(INSTALL_ZMQ)
 
-target_link_libraries(melissa_server pdaf_wrapper)
 
 target_include_directories(melissa_server PUBLIC ${CMAKE_SOURCE_DIR}/pdaf-wrapper)
 
@@ -20,7 +19,15 @@ target_link_libraries(melissa_server gfortran ${Fortran_MATH_LIBRARIES} m)
 
 # To link against pdaf stuff:
 target_link_libraries(melissa_server ${MPI_Fortran_LIBRARIES})
+# PDAF:
+
+target_link_libraries(melissa_server pdaf)
+target_link_libraries(melissa_server gfortran m)
+
+# To link against pdaf stuff:
+target_link_libraries(melissa_server ${MPI_Fortran_LIBRARIES} ${Fortran_MATH_LIBRARIES})
 
 
+target_link_libraries(melissa_server pdaf_wrapper)
 
 INSTALL(TARGETS melissa_server RUNTIME DESTINATION bin)
