--- a/pdaf-wrapper/CMakeLists.txt
+++ b/pdaf-wrapper/CMakeLists.txt
@@ -12,34 +12,18 @@ file(GLOB
      user/*.F90
      )
 
-add_library(pdaf_wrapper STATIC ${ALL_PDAF_WRAPPER} ${ALL_USER})
+#add_library(pdaf_wrapper STATIC ${ALL_PDAF_WRAPPER} ${ALL_USER})
+add_library(pdaf_wrapper SHARED ${ALL_PDAF_WRAPPER} ${ALL_USER} PDAFAssimilator.cxx)
+target_include_directories(pdaf_wrapper PRIVATE ${CMAKE_SOURCE_DIR}/server)
 target_compile_options(pdaf_wrapper BEFORE PUBLIC -fPIC)
-
-target_compile_definitions(pdaf_wrapper PRIVATE -DPARFLOW_STAND_ALONE)
 
 
 # PDAF:
-target_link_libraries(pdaf_wrapper pdaf)
-target_link_libraries(pdaf_wrapper gfortran m)
+target_link_libraries(pdaf_wrapper PUBLIC pdaf)
+target_link_libraries(pdaf_wrapper PUBLIC gfortran m)
 
 # To link against pdaf stuff:
-target_link_libraries(pdaf_wrapper ${MPI_Fortran_LIBRARIES} ${Fortran_MATH_LIBRARIES})
+target_link_libraries(pdaf_wrapper PUBLIC ${MPI_Fortran_LIBRARIES} ${Fortran_MATH_LIBRARIES})
 
-#find_package(NetCDF REQUIRED)
-find_library(NETCDF_F_LIBRARY NAMES libnetcdff.a)
-if (NETCDF_F_LIBRARY-NOTFOUND)
-    message(FATAL_ERROR "Cannot compile! libnetcdff.a not found!")
-endif()
-target_link_libraries(pdaf_wrapper ${NETCDF_F_LIBRARY})
+install (TARGETS pdaf_wrapper LIBRARY DESTINATION lib)
 
-find_library(NETCDF_LIBRARY NAMES libnetcdf.so)
-if (NETCDF_LIBRARY-NOTFOUND)
-    message(FATAL_ERROR "Cannot compile! libnetcdf.so not found!")
-endif()
-target_link_libraries(pdaf_wrapper ${NETCDF_LIBRARY})
-
-find_path(NETCDF_F_INCLUDE_DIR NAMES netcdf.mod)
-if (NETCDF_F_INCLUDE_DIR-NOTFOUND)
-    message(FATAL_ERROR "Cannot compile! netcdf.mod not found!")
-endif()
-target_include_directories(pdaf_wrapper PUBLIC ${NETCDF_F_INCLUDE_DIR})
