Implement an API that supports the hidden state
The hidden state is saved in an extra field that may not be touched by
the do_update_step function of the assimilator. The correct hidden state
(if one on field registration was given) will be always linked to the
corresponding state vector which is assimilated. When e.g. propagating a
state vector the corresponding hidden state is also sent to the runner.

As the hidden state is not changed by the update step it is enough to
save it once (and not split into two vectors: background and analysis
state as needed for the state vector)

--- a/examples/simulation1/CMakeLists.txt
+++ b/examples/simulation1/CMakeLists.txt
@@ -9,3 +9,9 @@ add_executable(simulation1-stateful simulation.cxx)
 target_compile_definitions(simulation1-stateful PRIVATE -DBE_STATEFUL)
 target_link_libraries(simulation1-stateful melissa_api)
 INSTALL(TARGETS simulation1-stateful RUNTIME DESTINATION bin)
+
+# add a stateful simulation for testing using hidden states (so at the end it is stateless
+add_executable(simulation1-hidden simulation.cxx)
+target_compile_definitions(simulation1-hidden PRIVATE -DUSE_HIDDEN_STATE -DBE_STATEFUL)
+target_link_libraries(simulation1-hidden melissa_api)
+INSTALL(TARGETS simulation1-hidden RUNTIME DESTINATION bin)
