Pass parallel HDF5 to the FTI built

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ if(INSTALL_FTI)
         GIT_PROGRESS TRUE
         PREFIX ${CMAKE_CURRENT_BINARY_DIR}/FTI
         CMAKE_ARGS -DENABLE_TESTS=0 -DENABLE_EXAMPLES=0 -DENABLE_HDF5=1
+        -DHDF5_ROOT=${HDF5_ROOT}
         -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}/FTI)
     MESSAGE(STATUS "FTI will be installed")
     set(FTI_PATH "${CMAKE_INSTALL_PREFIX}/FTI")
