Add the melissa launcher
Thus melissa is included as subrepository

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "examples/parflow-pure/parflow-melissa-da"]
 	path = examples/parflow-pure/parflow-melissa-da
 	url = git@gitlab.inria.fr:sfriedem/parflow-melissa-da.git
+[submodule "melissa"]
+	path = melissa
+	url = git@gitlab.inria.fr:melissa/melissa.git
