--- a/examples/simulation2-pdaf/CMakeLists.txt
+++ b/examples/simulation2-pdaf/CMakeLists.txt
@@ -18,3 +18,7 @@ target_link_libraries(simulation2-pdaf melissa_api)
 
 
 INSTALL(TARGETS simulation2-pdaf RUNTIME DESTINATION bin)
+#${CMAKE_CURRENT_SOURCE_DIR}/test.sh
+add_test(NAME Simulation2-PDAF
+    COMMAND /bin/bash -c "./run-simulation2-pdaf.sh test && ./test.sh"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
