--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -2,9 +2,11 @@ file(GLOB
      ALL_COMMON
      RELATIVE
      ${CMAKE_CURRENT_SOURCE_DIR}
+     *.c
      *.cxx
      )
 
+ message ("All common: ${ALL_COMMON}")
 
 add_library(melissa_common OBJECT ${ALL_COMMON})
 
