--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -1,3 +1,5 @@
+. @Melissa_PATH@/bin/melissa_set_env.sh
+
 export PATH=@CMAKE_INSTALL_PREFIX@/bin:$PATH
 export LD_LIBRARY_PATH=@ZeroMQ_INCLUDE_DIR@/../lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:$LD_LIBRARY_PATH
