--- a/examples/simulation1/CMakeLists.txt
+++ b/examples/simulation1/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(simulation1 simulation.cxx)
 target_link_libraries(simulation1 melissa_api)
 INSTALL(TARGETS simulation1 RUNTIME DESTINATION bin)
 add_test(NAME stateless
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1)
+    COMMAND ${in_env} ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1)
 
 # add a stateful simulation for testing
 add_executable(simulation1-stateful simulation.cxx)
@@ -14,7 +14,7 @@ INSTALL(TARGETS simulation1-stateful RUNTIME DESTINATION bin)
 
 # we expect a no here, so negate the result!
 add_test(NAME stateful
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1-stateful)
+    COMMAND ${in_env} ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1-stateful)
 
 set_tests_properties(stateful PROPERTIES WILL_FAIL TRUE)
 
@@ -24,7 +24,9 @@ target_compile_definitions(simulation1-hidden PRIVATE -DUSE_HIDDEN_STATE -DBE_ST
 target_link_libraries(simulation1-hidden melissa_api)
 INSTALL(TARGETS simulation1-hidden RUNTIME DESTINATION bin)
 add_test(NAME stateless-hidden
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1-hidden)
+    COMMAND ${in_env} ${CMAKE_CURRENT_SOURCE_DIR}/../check_stateless.sh ${CMAKE_CURRENT_BINARY_DIR}/simulation1-hidden)
 
 add_test(NAME fault-tolerance
-    COMMAND ./test-fault-tolerance.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+    COMMAND ${in_env} ./test-fault-tolerance.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_test(NAME launcher COMMAND ${in_env} ./run-launcher.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
