Improve python script suite
Now there is a single python command that runs a melissa-da study.
This simplifies writing a testsuite a lot!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ add_subdirectory(pdaf-wrapper)
 add_subdirectory(server)
 add_subdirectory(api)
 
+add_subdirectory(launcher)
+
+
 add_subdirectory(examples)
 
 find_package(Melissa REQUIRED HINTS "${CMAKE_SOURCE_DIR}/melissa/install/share/cmake/Melissa")
