--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -6,3 +6,5 @@ export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
 export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 export MPIEXEC=@MPIEXEC_EXECUTABLE@
+
+export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python$PYTHONPATH
